# airc-skill

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PUBLIC_USAGE.md  PUBLIC_USAGE.zh-CN.md  README.md  README.zh-CN.md  SKILL.md  pyproject.toml  test.md
airc_skill/: __init__.py  academic_sentence_naturalization.py  authorial_intent.py  body_metrics.py  chapter_policy.py  chunker.py  cli.py  config.py  core_guard.py  evidence_fidelity.py  guidance.py  input_normalizer.py  io_utils.py  l2_style_profile.py  local_revision_realism.py  markdown_guard.py  models.py  natural_revision_profile.py  paragraph_skeleton.py  pipeline.py  public_api.py  reporters.py  reviewer.py  revision_doctrine.py  rewriter.py  semantic_role_integrity.py  sentence_readability.py  skill_protocol.py  suggester.py  target_style_alignment.py  validator.py
examples/: _user_excerpt.airc.md  _user_excerpt.md  sample.md  sample.txt
prompts/: review_prompt.txt  rewrite_prompt.txt  suggest_prompt.txt  system_prompt.txt
references/: agent-guided-workflow.md
tests/: test_academic_sentence_naturalization.py  test_agent_first_workflow.py  test_authorial_intent.py  test_body_only_rewrite_system.py  test_chapter_policy.py  test_core_content_integrity.py  test_developmental_rewrite.py  test_evidence_fidelity.py  test_format_integrity.py  test_guidance.py  test_human_revision_simulation.py  test_input_normalizer.py  test_l2_style_profile.py  test_local_revision_realism.py  test_markdown_guard.py  test_natural_revision_doctrine.py  test_paragraph_skeleton_policy.py  test_pipeline_md.py  test_pipeline_output_policy.py  test_pipeline_txt.py  test_public_protocol_layer.py  test_public_release_docs.py  test_rewriter_naturalness.py  test_rewriter_regression.py  test_rewriter_structure_constraints.py  test_semantic_role_integrity.py  test_sentence_readability.py  test_skill_protocol.py  test_strict_enforcement.py  test_target_style_alignment.py  test_template_risk_policy.py  test_validator.py
