[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airc-skill"
version = "0.2.0b0"
description = "Agent-first academic revision skill with markdown/text/docx normalization and strict write-gate review."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI Codex" }]
keywords = ["markdown", "writing", "revision", "academic", "text"]
dependencies = []
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Text Processing :: Markup :: Markdown",
]

[project.urls]
Homepage = "https://github.com/openai-codex/airc-skill"
Issues = "https://github.com/openai-codex/airc-skill/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
airc = "airc_skill.cli:main"

[tool.setuptools.packages.find]
include = ["airc_skill*"]
exclude = ["tests*", "examples*", "prompts*", "references*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
